replace TypeDispatcher with instanceof